--- a/PSD to HTML  Part - 1/assets/css/style.css
+++ b/PSD to HTML  Part - 1/assets/css/style.css
@@ -58,6 +58,10 @@ p {
     position: relative;
 }
 
+.content-top-space{
+    margin-top: 70px;
+}
+
 /*
 ==========================================
     Header Menu CSS
@@ -247,4 +251,51 @@ nav.main-menu ul li a:hover{
     height: 35px;
     border-radius: 50px;
     padding: 5px;
+    margin: 3px;
+    transition: .3s;
+}
+.about-left-details {
+    padding: 13px 0;
+  }
+.about-left-details ul li a:hover{
+    background: #fe320a;
+    color: #fff;
+}
+.about-right {
+	margin-top: 30px;
+}
+
+.about-right h3 {
+}
+.about-right h3 {
+  font-size: 26px;
+  font-family: 'Raleway',sans-serif;
+  font-weight: 600;
+}
+.about-right p {
+  font-size: 14px;
+  font-family: 'Raleway',sans-serif;
+  line-height: 22px;
+  margin-top: 25px;
+  color: #1e1e1e;
+}
+.about-right p strong {
+  color: #515050;
+}
+.about-right a {
+  text-decoration: none;
+  font-size: 20px;
+  background: #fe320a;
+  color: #fff;
+  font-weight: 600;
+  display: inline-block;
+  padding: 10px 22px;
+  margin-top: 25px;
+  transition: .3s;
+  border: 1px solid #fe320a;
+}
+.about-right a:hover{
+    background: #fff;
+    color: #fe320a;
+    border: 1px solid #fe320a;
 }
