--- a/PSD to HTML  Part - 1/assets/css/style.css
+++ b/PSD to HTML  Part - 1/assets/css/style.css
@@ -564,6 +564,8 @@ section.skill {
     font-family: 'Raleway',sans-serif;
     font-size: 20px;
     font-weight: 600;
+    border: none;
+    outline: none;
     text-transform: uppercase;
     transition: .3s;
 }
@@ -571,5 +573,40 @@ section.skill {
     color: red;
 }
 .portfolio-item {
-	margin-top: 34px;
+    margin-top: 36px;
+    position: relative;
+    transition: .3s;
 }
+.portfolio-item img{
+    max-width: 100%;
+}
+.portfolio-item:hover .portfolio-item-hover{
+    visibility: visible;
+    opacity: 1;
+}
+.portfolio-item-hover{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    color: #fff;
+    background: #ff000087;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+    visibility: hidden;
+    opacity: 0;
+}
+.portfolio-item-hover a{
+    font-size: 24px;
+    cursor: pointer;
+    color: #fff;
+}
+/*
+==========================================
+         Team css
+==========================================
+*/
