--- a/PSD to HTML  Part - 1/assets/css/style.css
+++ b/PSD to HTML  Part - 1/assets/css/style.css
@@ -180,6 +180,7 @@ nav.main-menu ul li a:hover{
     background-size: cover; 
     position: relative;
     z-index: 0;
+    background-attachment: fixed;
 }
 .header-img::after{
     content: '';
@@ -374,6 +375,7 @@ nav.main-menu ul li a:hover{
     color: #fff;
     position: relative;
     z-index: 0;
+    background-attachment: fixed;
 }
 
 .video-area::after {
@@ -519,6 +521,7 @@ section.skill {
     text-align: center;
     color: #fff;
       
+    background-attachment: fixed;
 }
 .counter::after{
     content: '';
@@ -682,6 +685,7 @@ h4.team-name{
     position: relative;
     z-index: 0;
     color: #fff;
+    background-attachment: fixed;
 }
 .owl-carousel-testimonial img{
  width: 100px !important;
@@ -769,6 +773,7 @@ a.blog-button:hover{
     position: relative;
     z-index: 0;
     color: #fff;
+    background-attachment: fixed;
 }
 .contact::after{
     position: absolute;
@@ -780,4 +785,54 @@ a.blog-button:hover{
     z-index: -1;
     background: #000000;
     opacity: .55;
+}
+.contact input{
+    background: transparent;
+    border: 1px solid #fff;
+    margin-bottom: 25px;
+    height: 42px;
+    border-radius: 5px;
+}
+.contact textarea{
+    background: transparent;
+    border: 1px solid #fff;
+    height: 200px;
+    margin-bottom: 25px;
+    padding-top: 20px;
+    border-radius: 5px;
+}
+.contact button{
+    background: #fe320a;
+    border: 0;
+    font-size: 20px;
+    padding: 10px 32px;
+    transition: .3s;
+    border-radius: 5px;
+}
+.contact button:hover{
+    background: #f6f6f6;
+    color: #fe320a;
+}
+.contact input::placeholder,.contact textarea::placeholder{
+    color: #fff;
+}
+/*
+==========================================
+         contact css
+==========================================
+*/
+.footer{
+    background: #121111;
+    color: #fff;
+    padding: 30px 0;
+}
+.footer-icon ul li{
+    float: left;
+    margin-right: 15px;
+}
+.footer-icon ul li:last-child{
+    margin-right: 0;
+}
+.footer-icon ul li a{
+    color: #fff;
 }
